--- a/html/home.html
+++ b/html/home.html
@@ -33,15 +33,15 @@
 
     <div id="friends-menu">
         <div class="friend-nav">
-            <button id="edit" onclick="myEdit()"><i class="fa-solid fa-pen"></i></button>
+            <button id="edit" onclick="location.href='addFriend.html'"><i class="fa-solid fa-plus"></i></button>
             <p id="head">Friends</p>
             <button id="find" onclick="myFind()"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="body" id="body">
-            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button><i class="fa-solid fa-trash"></i></button></div>
-            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button><i class="fa-solid fa-trash"></i></button></div>
-            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button><i class="fa-solid fa-trash"></i></button></div>
-            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button><i class="fa-solid fa-trash"></i></button></div>
+            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button onclick="location.href='editFriend.html'"><i class="fa-solid fa-pen"></i></button></div>
+            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button onclick="location.href='editFriend.html'"><i class="fa-solid fa-pen"></i></button></div>
+            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button onclick="location.href='editFriend.html'"><i class="fa-solid fa-pen"></i></button></div>
+            <div class="friend-card"><i class="fa-solid fa-face-smile"></i><p>ชื่อเพื่อน</p><button onclick="location.href='editFriend.html'"><i class="fa-solid fa-pen"></i></button></div>
         </div>
     </div>
 
